lab2/ingress/deployment.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: 20.93.247.193 # ingress-nginx-controller
#   rules:
#   - http:
#       paths:
#       - path: /testpath
#         pathType: Prefix
#         backend:
#           service:
#             name: fleetman-webapp
#             port:
#               number: 80
#   - http:
#       paths:
#       - path: /secondpath
#         pathType: Prefix
#         backend:
#           service:
#             name: fleetman-webapp2
#             port:
#               number: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-v1
spec:
  selector:
    matchLabels:
      k8s: webapp_pods_v1
  replicas: 1
  template:
    metadata:
      labels:
        k8s: webapp_pods_v1
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-v2
spec:
  selector:
    matchLabels:
      k8s: webapp_pods_v2
  replicas: 1
  template:
    metadata:
      labels:
        k8s: webapp_pods_v2
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:release0
