lab2/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp-v2
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp-v2
            port:
              number: 80
